--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -688,7 +688,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hotel_df"
+   ]
   },
   {
    "cell_type": "code",
