--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -685,11 +685,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sakis\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>cloudiness</th>\n",
+       "      <th>country</th>\n",
+       "      <th>data</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>max_temp</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Tūkrah</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>1598663012</td>\n",
+       "      <td>78</td>\n",
+       "      <td>32.53</td>\n",
+       "      <td>20.58</td>\n",
+       "      <td>74.57</td>\n",
+       "      <td>5.03</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>47</td>\n",
+       "      <td>Rodolfo Sánchez Taboada</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>1598663017</td>\n",
+       "      <td>86</td>\n",
+       "      <td>31.72</td>\n",
+       "      <td>-116.57</td>\n",
+       "      <td>72.00</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>134</td>\n",
+       "      <td>Iğdır</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>1598663042</td>\n",
+       "      <td>46</td>\n",
+       "      <td>39.92</td>\n",
+       "      <td>44.05</td>\n",
+       "      <td>71.60</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>156</td>\n",
+       "      <td>Awjilah</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>1598663049</td>\n",
+       "      <td>66</td>\n",
+       "      <td>29.11</td>\n",
+       "      <td>21.29</td>\n",
+       "      <td>76.48</td>\n",
+       "      <td>8.28</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>203</td>\n",
+       "      <td>Caravelas</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1598662847</td>\n",
+       "      <td>88</td>\n",
+       "      <td>-17.71</td>\n",
+       "      <td>-39.25</td>\n",
+       "      <td>70.54</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0                city_name  cloudiness country        data  \\\n",
+       "29           29                   Tūkrah           0      LY  1598663012   \n",
+       "47           47  Rodolfo Sánchez Taboada           0      MX  1598663017   \n",
+       "134         134                    Iğdır           0      TR  1598663042   \n",
+       "156         156                  Awjilah           0      LY  1598663049   \n",
+       "203         203                Caravelas           0      BR  1598662847   \n",
+       "\n",
+       "     humidity    lat     lon  max_temp  wind_speed Hotel Name  \n",
+       "29         78  32.53   20.58     74.57        5.03             \n",
+       "47         86  31.72 -116.57     72.00        1.99             \n",
+       "134        46  39.92   44.05     71.60        4.70             \n",
+       "156        66  29.11   21.29     76.48        8.28             \n",
+       "203        88 -17.71  -39.25     70.54        3.60             "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hotel_df = "
+    " new_weather[\"Hotel Name\"] =\"\"\n",
+    " new_weather.head()"
    ]
   },
   {
@@ -697,7 +840,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# params dictionary to update each iteration\n",
+    "params = {\n",
+    "    \"radius\": 5000,\n",
+    "    \"types\": \"hotel\",\n",
+    "    \"key\": gkey\n",
+    "}\n",
+    "\n",
+    "# Use the lat/lng we recovered to identify airports\n",
+    "for index, row in new_weather.iterrows():\n",
+    "    # get lat, lng from df\n",
+    "    lat = row[\"lat\"]\n",
+    "    lng = row[\"Lon\"]\n",
+    "\n",
+    "    # change location each iteration while leaving original params in place\n",
+    "    params[\"location\"] = f\"{lat},{lng}\"\n",
+    "\n",
+    "    # Use the search term: \"International Airport\" and our lat/lng\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "    # make request and print url\n",
+    "    name_address = requests.get(base_url, params=params)\n",
+    "    \n",
+    "#     print the name_address url, avoid doing for public github repos in order to avoid exposing key\n",
+    "#     print(name_address.url)\n",
+    "\n",
+    "    # convert to json\n",
+    "    name_address = name_address.json()\n",
+    "    # print(json.dumps(name_address, indent=4, sort_keys=True))\n",
+    "\n",
+    "    # Since some data may be missing we incorporate a try-except to skip any that are missing a data point.\n",
+    "    try:\n",
+    "        cities_pd.loc[index, \"Airport Name\"] = name_address[\"results\"][0][\"name\"]\n",
+    "        cities_pd.loc[index, \"Airport Address\"] = name_address[\"results\"][0][\"vicinity\"]\n",
+    "        cities_pd.loc[index, \"Airport Rating\"] = name_address[\"results\"][0][\"rating\"]\n",
+    "    except (KeyError, IndexError):\n",
+    "        print(\"Missing field/result... skipping.\")"
+   ]
   },
   {
    "cell_type": "code",
