--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -721,88 +721,156 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>city_name</th>\n",
-       "      <th>cloudiness</th>\n",
        "      <th>country</th>\n",
-       "      <th>data</th>\n",
-       "      <th>humidity</th>\n",
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
-       "      <th>max_temp</th>\n",
-       "      <th>wind_speed</th>\n",
        "      <th>Hotel Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>29</td>\n",
        "      <td>Tūkrah</td>\n",
-       "      <td>0</td>\n",
        "      <td>LY</td>\n",
-       "      <td>1598663012</td>\n",
-       "      <td>78</td>\n",
        "      <td>32.53</td>\n",
        "      <td>20.58</td>\n",
-       "      <td>74.57</td>\n",
-       "      <td>5.03</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>47</th>\n",
-       "      <td>47</td>\n",
        "      <td>Rodolfo Sánchez Taboada</td>\n",
-       "      <td>0</td>\n",
        "      <td>MX</td>\n",
-       "      <td>1598663017</td>\n",
-       "      <td>86</td>\n",
        "      <td>31.72</td>\n",
        "      <td>-116.57</td>\n",
-       "      <td>72.00</td>\n",
-       "      <td>1.99</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
-       "      <td>134</td>\n",
        "      <td>Iğdır</td>\n",
-       "      <td>0</td>\n",
        "      <td>TR</td>\n",
-       "      <td>1598663042</td>\n",
-       "      <td>46</td>\n",
        "      <td>39.92</td>\n",
        "      <td>44.05</td>\n",
-       "      <td>71.60</td>\n",
-       "      <td>4.70</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156</th>\n",
-       "      <td>156</td>\n",
        "      <td>Awjilah</td>\n",
-       "      <td>0</td>\n",
        "      <td>LY</td>\n",
-       "      <td>1598663049</td>\n",
-       "      <td>66</td>\n",
        "      <td>29.11</td>\n",
        "      <td>21.29</td>\n",
-       "      <td>76.48</td>\n",
-       "      <td>8.28</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>203</th>\n",
-       "      <td>203</td>\n",
        "      <td>Caravelas</td>\n",
-       "      <td>0</td>\n",
        "      <td>BR</td>\n",
-       "      <td>1598662847</td>\n",
-       "      <td>88</td>\n",
        "      <td>-17.71</td>\n",
        "      <td>-39.25</td>\n",
-       "      <td>70.54</td>\n",
-       "      <td>3.60</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>Zaraza</td>\n",
+       "      <td>VE</td>\n",
+       "      <td>9.35</td>\n",
+       "      <td>-65.32</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>Tiznit Province</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>29.58</td>\n",
+       "      <td>-9.50</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>Lago da Pedra</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-4.33</td>\n",
+       "      <td>-45.17</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>Tabas</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>33.60</td>\n",
+       "      <td>56.92</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>417</th>\n",
+       "      <td>Capaci</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>38.17</td>\n",
+       "      <td>13.24</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>466</th>\n",
+       "      <td>Torrevieja</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>37.98</td>\n",
+       "      <td>-0.68</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>Barra do Garças</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-15.89</td>\n",
+       "      <td>-52.26</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>Marchena</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>37.33</td>\n",
+       "      <td>-5.42</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>Behshahr</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>36.69</td>\n",
+       "      <td>53.55</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>Marsá Maţrūḩ</td>\n",
+       "      <td>EG</td>\n",
+       "      <td>31.35</td>\n",
+       "      <td>27.25</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>Cehegín</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>38.09</td>\n",
+       "      <td>-1.80</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>San Lorenzo</td>\n",
+       "      <td>PY</td>\n",
+       "      <td>-25.33</td>\n",
+       "      <td>-57.53</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>Changping</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>40.22</td>\n",
+       "      <td>116.22</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -810,49 +878,190 @@
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0                city_name  cloudiness country        data  \\\n",
-       "29           29                   Tūkrah           0      LY  1598663012   \n",
-       "47           47  Rodolfo Sánchez Taboada           0      MX  1598663017   \n",
-       "134         134                    Iğdır           0      TR  1598663042   \n",
-       "156         156                  Awjilah           0      LY  1598663049   \n",
-       "203         203                Caravelas           0      BR  1598662847   \n",
-       "\n",
-       "     humidity    lat     lon  max_temp  wind_speed Hotel Name  \n",
-       "29         78  32.53   20.58     74.57        5.03             \n",
-       "47         86  31.72 -116.57     72.00        1.99             \n",
-       "134        46  39.92   44.05     71.60        4.70             \n",
-       "156        66  29.11   21.29     76.48        8.28             \n",
-       "203        88 -17.71  -39.25     70.54        3.60             "
+       "                   city_name country    lat     lon Hotel Name\n",
+       "29                    Tūkrah      LY  32.53   20.58           \n",
+       "47   Rodolfo Sánchez Taboada      MX  31.72 -116.57           \n",
+       "134                    Iğdır      TR  39.92   44.05           \n",
+       "156                  Awjilah      LY  29.11   21.29           \n",
+       "203                Caravelas      BR -17.71  -39.25           \n",
+       "310                   Zaraza      VE   9.35  -65.32           \n",
+       "325          Tiznit Province      MA  29.58   -9.50           \n",
+       "362            Lago da Pedra      BR  -4.33  -45.17           \n",
+       "392                    Tabas      IR  33.60   56.92           \n",
+       "417                   Capaci      IT  38.17   13.24           \n",
+       "466               Torrevieja      ES  37.98   -0.68           \n",
+       "482          Barra do Garças      BR -15.89  -52.26           \n",
+       "510                 Marchena      ES  37.33   -5.42           \n",
+       "520                 Behshahr      IR  36.69   53.55           \n",
+       "539             Marsá Maţrūḩ      EG  31.35   27.25           \n",
+       "540                  Cehegín      ES  38.09   -1.80           \n",
+       "543              San Lorenzo      PY -25.33  -57.53           \n",
+       "548                Changping      CN  40.22  116.22           "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     " new_weather[\"Hotel Name\"] =\"\"\n",
-    " new_weather.head()"
+    " #new_weather.head()\n",
+    "\n",
+    "hotel_df = new_weather.loc[:,[\"city_name\", \"country\", \"lat\", \"lon\",\"Hotel Name\"]]\n",
+    "hotel_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>country</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Tūkrah</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>32.53</td>\n",
+       "      <td>20.58</td>\n",
+       "      <td>Tocra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Rodolfo Sánchez Taboada</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>31.72</td>\n",
+       "      <td>-116.57</td>\n",
+       "      <td>El Maneadero</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>Iğdır</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>39.92</td>\n",
+       "      <td>44.05</td>\n",
+       "      <td>Iğdır</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>Awjilah</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>29.11</td>\n",
+       "      <td>21.29</td>\n",
+       "      <td>Awjilah</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>Caravelas</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-17.71</td>\n",
+       "      <td>-39.25</td>\n",
+       "      <td>Caravelas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>Zaraza</td>\n",
+       "      <td>VE</td>\n",
+       "      <td>9.35</td>\n",
+       "      <td>-65.32</td>\n",
+       "      <td>Zaraza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>Tiznit Province</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>29.58</td>\n",
+       "      <td>-9.50</td>\n",
+       "      <td>Ouijjane</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>Lago da Pedra</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-4.33</td>\n",
+       "      <td>-45.17</td>\n",
+       "      <td>São José dos Curicas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>Tabas</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>33.60</td>\n",
+       "      <td>56.92</td>\n",
+       "      <td>Tabas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>417</th>\n",
+       "      <td>Capaci</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>38.17</td>\n",
+       "      <td>13.24</td>\n",
+       "      <td>Palermo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   city_name country    lat     lon            Hotel Name\n",
+       "29                    Tūkrah      LY  32.53   20.58                 Tocra\n",
+       "47   Rodolfo Sánchez Taboada      MX  31.72 -116.57          El Maneadero\n",
+       "134                    Iğdır      TR  39.92   44.05                 Iğdır\n",
+       "156                  Awjilah      LY  29.11   21.29               Awjilah\n",
+       "203                Caravelas      BR -17.71  -39.25             Caravelas\n",
+       "310                   Zaraza      VE   9.35  -65.32                Zaraza\n",
+       "325          Tiznit Province      MA  29.58   -9.50              Ouijjane\n",
+       "362            Lago da Pedra      BR  -4.33  -45.17  São José dos Curicas\n",
+       "392                    Tabas      IR  33.60   56.92                 Tabas\n",
+       "417                   Capaci      IT  38.17   13.24               Palermo"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# params dictionary to update each iteration\n",
     "params = {\n",
     "    \"radius\": 5000,\n",
     "    \"types\": \"hotel\",\n",
-    "    \"key\": gkey\n",
+    "    \"key\": g_key\n",
     "}\n",
     "\n",
     "# Use the lat/lng we recovered to identify airports\n",
     "for index, row in new_weather.iterrows():\n",
     "    # get lat, lng from df\n",
     "    lat = row[\"lat\"]\n",
-    "    lng = row[\"Lon\"]\n",
+    "    lng = row[\"lon\"]\n",
     "\n",
     "    # change location each iteration while leaving original params in place\n",
     "    params[\"location\"] = f\"{lat},{lng}\"\n",
@@ -861,22 +1070,18 @@
     "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
     "\n",
     "    # make request and print url\n",
-    "    name_address = requests.get(base_url, params=params)\n",
+    "    hotel_location = requests.get(base_url, params=params)\n",
     "    \n",
     "#     print the name_address url, avoid doing for public github repos in order to avoid exposing key\n",
     "#     print(name_address.url)\n",
     "\n",
     "    # convert to json\n",
-    "    name_address = name_address.json()\n",
+    "    hotel_location = hotel_location.json()\n",
     "    # print(json.dumps(name_address, indent=4, sort_keys=True))\n",
     "\n",
-    "    # Since some data may be missing we incorporate a try-except to skip any that are missing a data point.\n",
-    "    try:\n",
-    "        cities_pd.loc[index, \"Airport Name\"] = name_address[\"results\"][0][\"name\"]\n",
-    "        cities_pd.loc[index, \"Airport Address\"] = name_address[\"results\"][0][\"vicinity\"]\n",
-    "        cities_pd.loc[index, \"Airport Rating\"] = name_address[\"results\"][0][\"rating\"]\n",
-    "    except (KeyError, IndexError):\n",
-    "        print(\"Missing field/result... skipping.\")"
+    "    hotel_df.loc[index, \"Hotel Name\"] = hotel_location[\"results\"][0][\"name\"]\n",
+    "        \n",
+    "hotel_df.head(10)"
    ]
   },
   {
