hotel name done

--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "import requests\n",
     "import gmaps\n",
     "import os\n",
+    "import json\n",
     "\n",
     "# Import API key\n",
     "g_key = \"AIzaSyAyoYOK3elADQJyScjYk7u2ukQCOVeg4HU\"\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +260,7 @@
        "[563 rows x 10 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,13 +295,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4fdf501654f4b3f8406e794ed419e22",
+       "model_id": "db849fade56e431ba905b9d61b64d8d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +657,7 @@
        "548        83  40.22  116.22     77.00        2.24  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +900,7 @@
        "548                Changping      CN  40.22  116.22           "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +915,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing field/result... skipping.\n",
+      "Missing field/result... skipping.\n",
+      "Missing field/result... skipping.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# params dictionary to update each iteration\n",
+    "params = {\n",
+    "    \"radius\": 5000,\n",
+    "    \"types\": \"lodging\",\n",
+    "    \"key\": g_key\n",
+    "}\n",
+    "\n",
+    "# Use the lat/lng we recovered to identify airports\n",
+    "for index, row in new_weather.iterrows():\n",
+    "    # get lat, lng from df\n",
+    "    lat = row[\"lat\"]\n",
+    "    lng = row[\"lon\"]\n",
+    "\n",
+    "    # change location each iteration while leaving original params in place\n",
+    "    params[\"location\"] = f\"{lat},{lng}\"\n",
+    "\n",
+    "    # Use the search term: \"International Airport\" and our lat/lng\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "    # make request and print url\n",
+    "    hotel_location = requests.get(base_url, params=params)\n",
+    "    \n",
+    "#     print the name_address url, avoid doing for public github repos in order to avoid exposing key\n",
+    "#    print(hotel_location.url)\n",
+    "\n",
+    "    # convert to json\n",
+    "    hotel_location = hotel_location.json()\n",
+    "#    print(json.dumps(hotel_location, indent=4, sort_keys=True))\n",
+    "\n",
+    "    try:\n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = hotel_location[\"results\"][0][\"name\"]\n",
+    "    except (KeyError, IndexError):\n",
+    "        print(\"Missing field/result... skipping.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +1004,7 @@
        "      <td>LY</td>\n",
        "      <td>32.53</td>\n",
        "      <td>20.58</td>\n",
-       "      <td>Tocra</td>\n",
+       "      <td>استراحة لاقروتا</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>47</th>\n",
@@ -960,7 +1012,7 @@
        "      <td>MX</td>\n",
        "      <td>31.72</td>\n",
        "      <td>-116.57</td>\n",
-       "      <td>El Maneadero</td>\n",
+       "      <td>Casa De Thompson</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
@@ -968,7 +1020,7 @@
        "      <td>TR</td>\n",
        "      <td>39.92</td>\n",
        "      <td>44.05</td>\n",
-       "      <td>Iğdır</td>\n",
+       "      <td>Igdir Central Hotel Emperor Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>156</th>\n",
@@ -984,7 +1036,7 @@
        "      <td>BR</td>\n",
        "      <td>-17.71</td>\n",
        "      <td>-39.25</td>\n",
-       "      <td>Caravelas</td>\n",
+       "      <td>Pousada dos Navegantes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>310</th>\n",
@@ -992,7 +1044,7 @@
        "      <td>VE</td>\n",
        "      <td>9.35</td>\n",
        "      <td>-65.32</td>\n",
-       "      <td>Zaraza</td>\n",
+       "      <td>Hotel Zaraza</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>325</th>\n",
@@ -1016,7 +1068,7 @@
        "      <td>IR</td>\n",
        "      <td>33.60</td>\n",
        "      <td>56.92</td>\n",
-       "      <td>Tabas</td>\n",
+       "      <td>شرکت معماری مهراز شایگان آراد</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>417</th>\n",
@@ -1024,64 +1076,125 @@
        "      <td>IT</td>\n",
        "      <td>38.17</td>\n",
        "      <td>13.24</td>\n",
-       "      <td>Palermo</td>\n",
+       "      <td>Hotel Sirenetta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>466</th>\n",
+       "      <td>Torrevieja</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>37.98</td>\n",
+       "      <td>-0.68</td>\n",
+       "      <td>Hotel Fontana Plaza</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>Barra do Garças</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-15.89</td>\n",
+       "      <td>-52.26</td>\n",
+       "      <td>Hotel Pousada Tropical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>Marchena</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>37.33</td>\n",
+       "      <td>-5.42</td>\n",
+       "      <td>Molino La Boticaria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>Behshahr</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>36.69</td>\n",
+       "      <td>53.55</td>\n",
+       "      <td>Abbas Abad Hotel &amp; Restaurant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>Marsá Maţrūḩ</td>\n",
+       "      <td>EG</td>\n",
+       "      <td>31.35</td>\n",
+       "      <td>27.25</td>\n",
+       "      <td>Beau Site</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>Cehegín</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>38.09</td>\n",
+       "      <td>-1.80</td>\n",
+       "      <td>Apartamentos Begastri</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>San Lorenzo</td>\n",
+       "      <td>PY</td>\n",
+       "      <td>-25.33</td>\n",
+       "      <td>-57.53</td>\n",
+       "      <td>Canarias Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>Changping</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>40.22</td>\n",
+       "      <td>116.22</td>\n",
+       "      <td>Huachang Hotel</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   city_name country    lat     lon            Hotel Name\n",
-       "29                    Tūkrah      LY  32.53   20.58                 Tocra\n",
-       "47   Rodolfo Sánchez Taboada      MX  31.72 -116.57          El Maneadero\n",
-       "134                    Iğdır      TR  39.92   44.05                 Iğdır\n",
-       "156                  Awjilah      LY  29.11   21.29               Awjilah\n",
-       "203                Caravelas      BR -17.71  -39.25             Caravelas\n",
-       "310                   Zaraza      VE   9.35  -65.32                Zaraza\n",
-       "325          Tiznit Province      MA  29.58   -9.50              Ouijjane\n",
-       "362            Lago da Pedra      BR  -4.33  -45.17  São José dos Curicas\n",
-       "392                    Tabas      IR  33.60   56.92                 Tabas\n",
-       "417                   Capaci      IT  38.17   13.24               Palermo"
+       "                   city_name country    lat     lon  \\\n",
+       "29                    Tūkrah      LY  32.53   20.58   \n",
+       "47   Rodolfo Sánchez Taboada      MX  31.72 -116.57   \n",
+       "134                    Iğdır      TR  39.92   44.05   \n",
+       "156                  Awjilah      LY  29.11   21.29   \n",
+       "203                Caravelas      BR -17.71  -39.25   \n",
+       "310                   Zaraza      VE   9.35  -65.32   \n",
+       "325          Tiznit Province      MA  29.58   -9.50   \n",
+       "362            Lago da Pedra      BR  -4.33  -45.17   \n",
+       "392                    Tabas      IR  33.60   56.92   \n",
+       "417                   Capaci      IT  38.17   13.24   \n",
+       "466               Torrevieja      ES  37.98   -0.68   \n",
+       "482          Barra do Garças      BR -15.89  -52.26   \n",
+       "510                 Marchena      ES  37.33   -5.42   \n",
+       "520                 Behshahr      IR  36.69   53.55   \n",
+       "539             Marsá Maţrūḩ      EG  31.35   27.25   \n",
+       "540                  Cehegín      ES  38.09   -1.80   \n",
+       "543              San Lorenzo      PY -25.33  -57.53   \n",
+       "548                Changping      CN  40.22  116.22   \n",
+       "\n",
+       "                            Hotel Name  \n",
+       "29                     استراحة لاقروتا  \n",
+       "47                    Casa De Thompson  \n",
+       "134  Igdir Central Hotel Emperor Hotel  \n",
+       "156                            Awjilah  \n",
+       "203             Pousada dos Navegantes  \n",
+       "310                       Hotel Zaraza  \n",
+       "325                           Ouijjane  \n",
+       "362               São José dos Curicas  \n",
+       "392      شرکت معماری مهراز شایگان آراد  \n",
+       "417                    Hotel Sirenetta  \n",
+       "466                Hotel Fontana Plaza  \n",
+       "482             Hotel Pousada Tropical  \n",
+       "510                Molino La Boticaria  \n",
+       "520      Abbas Abad Hotel & Restaurant  \n",
+       "539                          Beau Site  \n",
+       "540              Apartamentos Begastri  \n",
+       "543                     Canarias Hotel  \n",
+       "548                     Huachang Hotel  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# params dictionary to update each iteration\n",
-    "params = {\n",
-    "    \"radius\": 5000,\n",
-    "    \"types\": \"hotel\",\n",
-    "    \"key\": g_key\n",
-    "}\n",
-    "\n",
-    "# Use the lat/lng we recovered to identify airports\n",
-    "for index, row in new_weather.iterrows():\n",
-    "    # get lat, lng from df\n",
-    "    lat = row[\"lat\"]\n",
-    "    lng = row[\"lon\"]\n",
-    "\n",
-    "    # change location each iteration while leaving original params in place\n",
-    "    params[\"location\"] = f\"{lat},{lng}\"\n",
-    "\n",
-    "    # Use the search term: \"International Airport\" and our lat/lng\n",
-    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
-    "\n",
-    "    # make request and print url\n",
-    "    hotel_location = requests.get(base_url, params=params)\n",
-    "    \n",
-    "#     print the name_address url, avoid doing for public github repos in order to avoid exposing key\n",
-    "#     print(name_address.url)\n",
-    "\n",
-    "    # convert to json\n",
-    "    hotel_location = hotel_location.json()\n",
-    "    # print(json.dumps(name_address, indent=4, sort_keys=True))\n",
-    "\n",
-    "    hotel_df.loc[index, \"Hotel Name\"] = hotel_location[\"results\"][0][\"name\"]\n",
-    "        \n",
-    "hotel_df.head(10)"
+    "hotel_df"
    ]
   },
   {
